# opengl_project

./: CMakeLists.txt  README  README.md
GLFW/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
GLFW/docs/: Makefile  cmake_install.cmake
GLFW/src/: Makefile  cmake_install.cmake  glfw3.pc
assets/: woman1.mtl
assimp-windows/lib/cmake/assimp-5.4/: assimpTargets-noconfig.cmake
assimp-windows/lib/pkgconfig/: assimp.pc
include/: Sphere.h  camera.h  glad.h  mesh.h  model.h  shader.h  shader_m.h  shader_s.h
src/: Sphere.cpp  glad.c  main.cpp
src/shaders/: face_shader.fs  light_shader.fs
